added java 8 properties

--- a/bus_fare/bus_fleet_management/pom.xml
+++ b/bus_fare/bus_fleet_management/pom.xml
@@ -9,6 +9,9 @@
   <artifactId>bus_fleet_management</artifactId>
   <name>bus_fleet_management</name>
   <description>fleet management services</description>
+  <properties>
+  	<java.version>8</java.version>
+  </properties>
   <dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
