added java 8 property

--- a/bus_fare/bus_eruka/pom.xml
+++ b/bus_fare/bus_eruka/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>bus_eruka</artifactId>
 
+         <properties>
+<java.version>8</java.version>
+</properties>
+         
     <dependencies>
         <!-- eureka server -->
         <dependency>
