--- a/bus_fare/bus_eruka/pom.xml
+++ b/bus_fare/bus_eruka/pom.xml
@@ -13,6 +13,8 @@
 
          <properties>
 <java.version>8</java.version>
+                  <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
 </properties>
          
     <dependencies>
