updated maven 6 property

--- a/bus_fare/bus_user_management/pom.xml
+++ b/bus_fare/bus_user_management/pom.xml
@@ -11,6 +11,8 @@
   <description>Manage user detail services</description>
   <properties>
     <java.version>8</java.version>
+	  <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
 </properties>
   <dependencies>
 		<dependency>
