--- a/bus_fare/bus_fleet_management/pom.xml
+++ b/bus_fare/bus_fleet_management/pom.xml
@@ -11,6 +11,8 @@
   <description>fleet management services</description>
   <properties>
   	<java.version>8</java.version>
+	  <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
   <dependencies>
 		<dependency>
