added new email microservice

--- a/bus_fare/bus_distance_calculator/src/main/resources/application.properties
+++ b/bus_fare/bus_distance_calculator/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=8085
 locationUrl=https://api.tomtom.com/routing/1/calculateRoute/
 authKey=OpzuBA1oynPlxXGjZmll2dAcGud7zHN5
 travelMode=bus
+
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
