--- a/bus_fare/bus_fleet_management/src/main/resources/application.properties
+++ b/bus_fare/bus_fleet_management/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
 spring.datasource.hikari.maxLifeTime : 600000
+
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
