--- a/bus_fare/bus_user_management/src/main/resources/application.properties
+++ b/bus_fare/bus_user_management/src/main/resources/application.properties
@@ -1,28 +1,28 @@
 server.port=8084
-spring.application.name=User Management Service
+spring.application.name=user_management_service
 
 server.error.include-stacktrace=always
 server.error.include-exception=true
 
 #postgreSQL configuration
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/easyfare
-spring.datasource.username=postgres
-spring.datasource.password=admin
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.show-sql=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/easyfare
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
 
 #MySQL configuration
-#spring.datasource.driverClassName =com.mysql.cj.jdbc.Driver
-#spring.datasource.url = jdbc:mysql://115.159.70.128:3306/bus_fare?useUnicode=true&characterEncoding=utf8
-#spring.datasource.username = root
-#spring.datasource.password = root
-#spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.show_sql=true
+spring.datasource.driverClassName =com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://115.159.70.128:3306/bus_fare?useUnicode=true&characterEncoding=utf8
+spring.datasource.username = root
+spring.datasource.password = root
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
 
 #Eureka Server
-#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 
 #Swagger
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
