--- a/bus_fare/bus_distance_calculator/pom.xml
+++ b/bus_fare/bus_distance_calculator/pom.xml
@@ -54,7 +54,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-	</dependencies>
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>fastjson</artifactId>
+          <version>1.2.78</version>
+          <scope>compile</scope>
+      </dependency>
+  </dependencies>
 	<build>
 		<plugins>
 			<plugin>
