updated application name to remove space

--- a/bus_fare/bus_fleet_management/src/main/resources/application.properties
+++ b/bus_fare/bus_fleet_management/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 8082
-spring.application.name=user fleet management
+spring.application.name=user_fleet_management
 spring.datasource.url=jdbc:mysql://115.159.70.128:3306/bus_fare
 spring.datasource.username=root
 spring.datasource.password=root
