passenger service updated

--- a/bus_fare/bus_fleet_management/src/main/resources/application.properties
+++ b/bus_fare/bus_fleet_management/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDiale
 spring.datasource.hikari.maxLifeTime : 600000
 
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+
+
+locationUrl=http://115.159.70.128:8083/route/ReceiveInAndCalculatePriceAndSaveHistory
