--- a/bus_fare/bus_route/src/main/resources/application.properties
+++ b/bus_fare/bus_route/src/main/resources/application.properties
@@ -8,3 +8,17 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+
+register-with-eureka: true
+###是否需要从eureka上获取注册信息
+fetch-registry: true
+
+feign.client.config.default.connectTimeout=160000000
+feign.client.config.default.readTimeout=160000000
+
+
+
+
+
+
+
