--- a/bus_fare/bus_user_management/src/main/resources/application.properties
+++ b/bus_fare/bus_user_management/src/main/resources/application.properties
@@ -13,7 +13,7 @@ server.error.include-exception=true
 #spring.datasource.password=admin
 
 #MySQL configuration
-spring.datasource.driverClassName =com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName =com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://115.159.70.128:3306/bus_fare?useUnicode=true&characterEncoding=utf8
 spring.datasource.username = root
 spring.datasource.password = root
@@ -27,3 +27,7 @@ eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 #Swagger
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 eureka.instance.preferIpAddress=true
+
+
+register-with-eureka: true
+fetch-registry: true
