adding eureka changes

--- a/bus_fare/bus_user_management/src/main/resources/application.properties
+++ b/bus_fare/bus_user_management/src/main/resources/application.properties
@@ -27,3 +27,6 @@ eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 #Swagger
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 eureka.instance.preferIpAddress=true
+
+fleet-management-service=user-fleet-management
+email-client-service=email-client
