--- a/bus_fare/bus_distance_calculator/src/main/resources/application.properties
+++ b/bus_fare/bus_distance_calculator/src/main/resources/application.properties
@@ -6,3 +6,7 @@ authKey=OpzuBA1oynPlxXGjZmll2dAcGud7zHN5
 travelMode=bus
 
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+
+feign:
+    httpclient:
+        follow-redirects: true
