--- a/bus_fare/bus_distance_calculator/pom.xml
+++ b/bus_fare/bus_distance_calculator/pom.xml
@@ -59,7 +59,11 @@
           <version>1.2.78</version>
           <scope>compile</scope>
       </dependency>
-  </dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-openfeign-core</artifactId>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
