--- a/bus_fare/bus_fleet_management/src/main/resources/application.properties
+++ b/bus_fare/bus_fleet_management/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 server.port = 8082
-<<<<<<< HEAD
 spring.application.name=user-fleet-management
-=======
-spring.application.name=user_fleet_management
->>>>>>> 4f705b31b39327ecf33e1f146ca2f52af2c945e8
+
 spring.datasource.url=jdbc:mysql://115.159.70.128:3306/bus_fare
 spring.datasource.username=root
 spring.datasource.password=root
@@ -16,6 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDiale
 spring.datasource.hikari.maxLifeTime : 600000
 
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+eureka.instance.preferIpAddress=true
 
 
 locationUrl=http://115.159.70.128:8083/route/ReceiveInAndCalculatePriceAndSaveHistory
