--- a/bus_fare/bus_route/src/main/resources/application.properties
+++ b/bus_fare/bus_route/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8083
-spring.application.name=route_server
+spring.application.name=routeserver
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://115.159.70.128:3306/bus_fare?useUnicode=true&characterEncoding=utf8
 spring.datasource.username = root
@@ -8,6 +8,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+eureka.instance.preferIpAddress=true
 
 register-with-eureka: true
 ###是否需要从eureka上获取注册信息
