--- a/bus_fare/bus_route/src/main/resources/application.properties
+++ b/bus_fare/bus_route/src/main/resources/application.properties
@@ -17,6 +17,9 @@ feign.client.config.default.connectTimeout=160000000
 feign.client.config.default.readTimeout=160000000
 
 
+fare_mode=stop_based
+base_price=1.5
+
 
 
 
