--- a/bus_fare/bus_route/src/main/resources/application.properties
+++ b/bus_fare/bus_route/src/main/resources/application.properties
@@ -19,7 +19,9 @@ feign.client.config.default.readTimeout=160000000
 
 
 fare_mode=stop_based
-base_price=1.5
+price_per_km=1.5
+peak_hour_percentage=1.1
+peak_time_url=http://3.82.36.94:5000/predictpeaktime
 
 
 
