--- a/bus_fare/bus_distance_calculator/src/main/resources/application.properties
+++ b/bus_fare/bus_distance_calculator/src/main/resources/application.properties
@@ -10,3 +10,6 @@ eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 feign:
     httpclient:
         follow-redirects: true
+        
+#Swagger
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
