--- a/bus_fare/bus_email_client/src/main/resources/application.properties
+++ b/bus_fare/bus_email_client/src/main/resources/application.properties
@@ -12,3 +12,6 @@ fromEmail=easyfare2@gmail.com
 
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 eureka.instance.preferIpAddress=true
+
+#Swagger
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
