--- a/bus_fare/bus_route/src/main/resources/application.properties
+++ b/bus_fare/bus_route/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8083
 spring.application.name=routeserver
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://115.159.70.128:3306/bus_fare?useUnicode=true&characterEncoding=utf8
-#spring.datasource.url = jdbc:mysql://localhost:3306/bus_fare?useUnicode=true&characterEncoding=utf8
+#spring.datasource.url = jdbc:mysql://115.159.70.128:3306/bus_fare?useUnicode=true&characterEncoding=utf8
+spring.datasource.url = jdbc:mysql://localhost:3306/bus_fare?useUnicode=true&characterEncoding=utf8
 spring.datasource.username = root
 spring.datasource.password = root
 spring.jpa.properties.hibernate.format_sql=true
