--- a/bus_fare/bus_distance_calculator/src/main/resources/application.properties
+++ b/bus_fare/bus_distance_calculator/src/main/resources/application.properties
@@ -5,7 +5,7 @@ locationUrl=https://api.tomtom.com/routing/1/calculateRoute/
 authKey=OpzuBA1oynPlxXGjZmll2dAcGud7zHN5
 travelMode=bus
 
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://10.0.30.34:8761/eureka/
 
 feign:
     httpclient:
