--- a/bus_fare/bus_email_client/src/main/resources/application.properties
+++ b/bus_fare/bus_email_client/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 fromEmail=easyfare2@gmail.com
 
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://10.0.30.34:8761/eureka/
 eureka.instance.preferIpAddress=true
 
 #Swagger
