--- a/bus_fare/bus_fleet_management/src/main/resources/application.properties
+++ b/bus_fare/bus_fleet_management/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
 spring.datasource.hikari.maxLifeTime : 600000
 
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://10.0.30.34:8761/eureka/
 eureka.instance.preferIpAddress=true
 
 
