--- a/bus_fare/bus_route/src/main/resources/application.properties
+++ b/bus_fare/bus_route/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.datasource.password = root
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://10.0.30.34:8761/eureka/
 eureka.instance.preferIpAddress=true
 
 register-with-eureka: true
-###ÊÇ·ñĞèÒª´ÓeurekaÉÏ»ñÈ¡×¢²áĞÅÏ¢
+###æ˜¯å¦éœ€è¦ä»eurekaä¸Šè·å–æ³¨å†Œä¿¡æ¯
 fetch-registry: true
 
 feign.client.config.default.connectTimeout=160000000
