--- a/bus_fare/bus_user_management/src/main/resources/application.properties
+++ b/bus_fare/bus_user_management/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
 #Eureka Server
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://10.0.30.34:8761/eureka/
 
 #Swagger
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
