--- a/bus_fare/bus_eruka/src/main/resources/application.properties
+++ b/bus_fare/bus_eruka/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port: 8761
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
+logging.path = /tmp/
