--- a/bus_fare/bus_user_management/src/main/resources/application.properties
+++ b/bus_fare/bus_user_management/src/main/resources/application.properties
@@ -14,8 +14,8 @@ server.error.include-exception=true
 
 #MySQL configuration
 spring.datasource.driverClassName =com.mysql.jdbc.Driver
-#spring.datasource.url = jdbc:mysql://115.159.70.128:3306/bus_fare?useUnicode=true&characterEncoding=utf8
-spring.datasource.url = jdbc:mysql://localhost:3306/bus_fare?useUnicode=true&characterEncoding=utf8
+spring.datasource.url = jdbc:mysql://115.159.70.128:3306/bus_fare?useUnicode=true&characterEncoding=utf8
+#spring.datasource.url = jdbc:mysql://localhost:3306/bus_fare?useUnicode=true&characterEncoding=utf8
 spring.datasource.username = root
 spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto = update
