--- a/bus_fare/bus_route/src/main/resources/application.properties
+++ b/bus_fare/bus_route/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8083
 spring.application.name=routeserver
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-#spring.datasource.url = jdbc:mysql://115.159.70.128:3306/bus_fare?useUnicode=true&characterEncoding=utf8
-spring.datasource.url = jdbc:mysql://localhost:3306/bus_fare?useUnicode=true&characterEncoding=utf8
+spring.datasource.url = jdbc:mysql://115.159.70.128:3306/bus_fare?useUnicode=true&characterEncoding=utf8
+#spring.datasource.url = jdbc:mysql://localhost:3306/bus_fare?useUnicode=true&characterEncoding=utf8
 spring.datasource.username = root
 spring.datasource.password = root
 spring.jpa.properties.hibernate.format_sql=true
@@ -24,6 +24,8 @@ price_per_km=1.5
 peak_hour_percentage=1.1
 peak_time_url=http://3.82.36.94:5000/predictpeaktime
 
+
+logging.path = /tmp/
 
 
 
