--- a/bus_fare/bus_fleet_management/src/main/resources/application.properties
+++ b/bus_fare/bus_fleet_management/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port = 8082
 
 spring.application.name=userfleetmanagement
 
-#spring.datasource.url=jdbc:mysql://115.159.70.128:3306/bus_fare
-spring.datasource.url=jdbc:mysql://localhost:3306/bus_fare
+spring.datasource.url=jdbc:mysql://115.159.70.128:3306/bus_fare
+#spring.datasource.url=jdbc:mysql://localhost:3306/bus_fare
 spring.datasource.username=root
 spring.datasource.password=root
 
